--- a/curso_02/ejercicio_02.html
+++ b/curso_02/ejercicio_02.html
@@ -21,7 +21,7 @@
       <br>
       <div>
         <label for="frase">frase favorita</label>
-        <textarea name="frase" id="frase" required></textarea>
+        <textarea name="frase" id="date" required></textarea>
       </div>
       <br>
        <button type="reset">Reset</button>
